fix UI bug on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.card {
-  margin: 3rem auto;
-}
-
 .select-field {
   margin: 2em;
 }
@@ -19,6 +15,10 @@
   .mapView {
     width: 60vw;
   }
+
+  .card {
+    margin: 3rem auto;
+  }
 }
 
 @media (min-width: 550px) and (max-width: 749px) {
@@ -30,14 +30,23 @@
   .mapView {
     width: 80vw;
   }
+
+  .card {
+    margin: 3rem auto;
+  }
 }
 
 @media screen and (max-width: 549px) {
   .quake-list {
-    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
   }
 
   .mapView {
-    width: 100vw;
+    max-width: 100vw;
+  }
+
+  .card {
+    margin: 4rem auto;
   }
 }
